PWA setup fixes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "My First PWA",
-    "name": "My First Progressive Web App",
+    "short_name": "BlueEYE02",
+    "name": "BlueEYE v2 Web App",
     "icons": [
       {
         "src":"icon192.png",
@@ -13,7 +13,7 @@
         "type": "image/png"
       }
     ],
-    "start_url": "/?utm_source=homescreen",
+    "start_url": "/sample/1",
     "background_color": "#222",
     "theme_color": "#222",
     "display": "fullscreen",
