--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,7 @@
         "type": "image/png"
       }
     ],
-    "start_url": "/sample/1/?mode=fullscreen",
+    "start_url": "/",
     "background_color": "#222",
     "theme_color": "#222",
     "display": "fullscreen",
